<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/acercade4"
    android:orientation="vertical" >

    <Button
        android:id="@+id/backtosearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/cerrar2" />

    <TextView
        android:id="@+id/acerca_de_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/backtosearch"
        android:layout_centerHorizontal="true"
        android:text="@string/acerca_de"
        android:textColor="@color/White"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/stuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/backtosearch"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/directorio_img"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/directorio_img_string"
            android:src="@drawable/eldirectorio_icon" />

        <TextView
            android:id="@+id/info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_1"
            android:textColor="@color/Gray54"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/preg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_2"
            android:textColor="@color/Blue"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailVentas"
            android:textColor="@color/Blue"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/preg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta2"
            android:textColor="@color/Blue"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailInfo"
            android:textColor="@color/Blue"
            android:textSize="15dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/publi_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/publy_info"
            android:src="@drawable/publylogo" />
    </LinearLayout>

</RelativeLayout>