<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/White"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/cupon_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/cupon_icon" />

    <TextView
        android:id="@+id/tituloCupon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titulo_cupo"
        android:textColor="@color/White"
        android:background="@drawable/barra2"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/fechaExpiracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fecha"
        android:textColor="@color/Blue"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/descripcion"
        android:textColor="@color/Black"
        android:textSize="30dp" />
    

</LinearLayout>